added static analizators